# image_recognition

./: CMakeLists.txt  package.xml
image_recognition_msgs/: CMakeLists.txt  package.xml
image_recognition_msgs/msg/: Annotation.msg  CategorialDistribution.msg  CategoryProbability.msg  Recognition.msg  RegionOfInterest.msg
image_recognition_msgs/srv/: Annotate.srv  Recognize.srv
image_recognition_rqt/: CMakeLists.txt  package.xml
image_recognition_util/: CMakeLists.txt  package.xml
image_recognition_util/src/: Image_writer.py
openface_ros/: CMakeLists.txt  package.xml
openface_ros/scripts/: face_recognition_node.py
openface_ros/src/: face_recognizer.py
